[package]
name = "lang-py-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "compiler"
crate-type = ["cdylib"]


[dependencies]
pyo3 = {version = "*", features = ["full"]}
tokio = {version = "*", features = ["full"]}