[package]
name = "lang-py"
version = "0.1.0"
authors = ["ori raisfeld"]
description = "a parser and builder for python code"
edition = "2021"
readme = "readme.md"
keywords = ["compiler", "parser", "compiler-maker"]
license-file = "LICENSE.txt"

[lib]
name = "lang_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "*", features = ["full", "multiple-pymethods"]}
tokio = {version = "*", features = ["full"]}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3